--- a/styles/global.css
+++ b/styles/global.css
@@ -51,6 +51,17 @@ button:hover {
   font-size: 1.2rem;
 }
 
+.guesses-list {
+  margin-top: 20px;
+  list-style: none;
+  padding: 0;
+  text-align: left;
+}
+
+.guesses-list li {
+  margin-bottom: 5px;
+}
+
 .error {
   color: #ff0033;
   margin-top: 20px;
