--- a/styles/global.css
+++ b/styles/global.css
@@ -66,3 +66,91 @@ button:hover {
   color: #ff0033;
   margin-top: 20px;
 }
+
+.container {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  max-width: 10000px;
+  margin: auto;
+  background-color: #1a1a1a;
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+input[type="text"] {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  color: white;
+}
+
+button:disabled {
+  background-color: #777;
+  cursor: not-allowed;
+}
+
+button:not(:disabled) {
+  background-color: #28a745;
+}
+
+button:not(:disabled):hover {
+  background-color: #218838;
+}
+
+.result-message {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.guesses-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.guess-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 12px;
+  border: 2px solid #ccc;
+  color: white;
+  font-weight: bold;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.guess-word {
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.guess-score {
+  font-size: 16px;
+}
+
