--- a/styles/global.css
+++ b/styles/global.css
@@ -109,3 +109,17 @@ button:not(:disabled):hover {
 .guess-score {
   font-size: 16px;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-out {
+  animation: fadeIn 2s ease-in-out forwards;
+}
+
